# qualle

./: .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Pipfile  README.md  openapi.json  pyproject.toml  requirements.txt
.github/workflows/: basic.yml  deploy.yml  extended.yml  main.yml  publish.yml  scorecard.yml
qualle/: eval.py  evaluate.py  evaluation.py  io.py  label_calibration.py  main.py  models.py  pipeline.py  quality_estimation.py  thesaurus.py  train.py  training.py  utils.py
qualle/features/: __init__.py  base.py  combined.py  confidence.py  simple_label_calibration.py  text.py  thesauri_label_calibration.py
qualle/features/label_calibration/: base.py  simple.py  simple_label_calibration.py  thesauri.py  thesauri_label_calibration.py
qualle/features/text/: __init__.py  count.py
qualle/interface/: cli.py  common.py  config.py  evaluation.py  internal.py  prediction.py  rest.py  training.py
qualle/interface/data/: __init__.py  annif.py  tsv.py
qualle/interface/io/: __init__.py  annif.py  common.py  tsv.py
qualle/label_calibration/: __init__.py  base.py  category.py  simple.py
tests/: common.py  conftest.py  test_eval.py  test_integration.py  test_io.py  test_lc.py  test_main.py  test_models.py  test_pipeline.py  test_qe.py  test_thesaurus.py  test_train.py  test_utils.py
tests/features/: test_combined.py  test_confidence.py  test_text.py
tests/features/label_calibration/test_simple/: test_calibrator.py  test_features.py
tests/features/label_calibration/test_simple_label_calibration/: __init__.py  test_calibrator.py  test_features.py
tests/features/label_calibration/test_thesauri/: __init__.py  conftest.py  test_calibrator.py  test_features.py  test_thesaurus.py  test_transformer.py
tests/features/label_calibration/test_thesauri_label_calibration/: common.py  conftest.py  test_calibrator.py  test_features.py  test_thesaurus.py  test_transformer.py
tests/features/test_simple_label_calibration/: test_calibrator.py  test_features.py
tests/features/test_thesauri_label_calibration/: common.py  conftest.py  test_calibrator.py  test_features.py  test_transformer.py
tests/features/text/: test_count.py  test_text.py
tests/interface/: __init__.py  common.py  conftest.py  test_cli.py  test_config.py  test_evaluate.py  test_internal.py  test_predict.py  test_rest.py  test_train.py
tests/interface/data/: __init__.py  test_annif.py  test_tsv.py
tests/interface/io/: test_annif.py  test_tsv.py
tests/label_calibration/: common.py  conftest.py  test_base.py  test_category.py  test_simple.py
