[tool.poetry]
name = "qualle"
version = "0.4.3-dev"
description = "A framework to predict the quality of a multi-label classification result"
authors = ["AutoSE <autose@zbw.eu>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
homepage = "https://github.com/zbw/qualle"

[project]
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
scipy = "~1.15"
numpy = "2.0.0"
scikit-learn = "~1.5"
rdflib = "7.0.*"
pydantic = "~2.8"
pydantic-settings = "~2.7"
fastapi = "~0.115"
uvicorn = "~0.34"

[tool.poetry.group.dev.dependencies]
pytest = "~8.4"
pytest-mock = "~3.14"
pytest-cov = "~6.0"
httpx = "*"
black = "~25.1"
pre-commit = "~4.1"

[tool.poetry.group.ci.dependencies]
safety = "~3.5.2"
bandit = "~1.8"
ruff = "~0.12"

[tool.ruff.lint]
ignore = ["E203"]
target-version = "py310"

[tool.coverage.run]
omit = [
    "qualle/main.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qualle = 'qualle.interface.cli:cli_entrypoint'
